codex-rs/tui/src/transcript_view/snapshots/codex_tui__transcript_view__footer__tests__activity_focus_keeps_controls_without_passive_hints.snap
---
source: tui/src/transcript_view/footer_tests.rs
expression: "hints.join(\"\\n\")"
---
collapsed
Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 3 },
    content: [
        "Activity summary                ",
        "    + Show details              ",
        "                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
20 columns: <composer hints>
32 columns: <composer hints>
80 columns: <composer hints>
focused
Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 3 },
    content: [
        "Activity summary                ",
        "    + Show details              ",
        "                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: UNDERLINED,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 18, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
focused, 20 columns: esc back
focused, 32 columns: enter details · esc back
focused, 80 columns: ↑ previous · ↓ next · enter details · esc back
expanded
Buffer {
    area: Rect { x: 0, y: 0, width: 32, height: 3 },
    content: [
        "Activity summary                ",
        "Hidden details                  ",
        "    − Show less                 ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: UNDERLINED,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
"ctrl-x t": <composer hints>
["ctrl-x t","f4"]: <composer hints>
[]: <composer hints>
