codex-rs/tui/src/transcript_view/snapshots/codex_tui__transcript_view__footer__tests__compact_navigation_hints.snap
---
source: tui/src/transcript_view/footer_tests.rs
expression: "snapshots.join(\"\\n\")"
---
26 columns, LoadingOlder: ↑ Loading… · esc latest
26 columns, LoadingBeginning: ↑ Loading… · esc latest
26 columns, Failed: Retry: ⌥</⌃home
26 columns, Complete: New activity · esc latest
38 columns, LoadingOlder: ↑ Loading… · esc latest
38 columns, LoadingBeginning: ↑ Loading… · esc latest
38 columns, Failed: Retry: ⌥</⌃home
38 columns, Complete: New activity · esc latest
78 columns, LoadingOlder: ↑ Loading earlier messages… · New activity · esc latest
78 columns, LoadingBeginning: ↑ Loading earlier messages… · New activity · esc latest
78 columns, Failed: New activity · Retry history: ⌥</⌃home.  esc latest
78 columns, Complete: New activity · esc latest
