codex-rs/tui/src/transcript_view/snapshots/codex_tui__transcript_view__footer__tests__loading_and_failure_preserve_search_query_and_caret.snap
---
source: tui/src/transcript_view/footer_tests.rs
expression: "hints.join(\"\\n\")"
---
32 columns, LoadingOlder: Loading… · esc cancel
32 columns, LoadingBeginning: Loading… · esc cancel
32 columns, Failed: ⌃p retry · esc cancel
12 columns, LoadingOlder: esc cancel
12 columns, LoadingBeginning: esc cancel
12 columns, Failed: esc cancel
