codex-rs/tui/src/transcript_view/snapshots/codex_tui__transcript_view__footer__tests__narrow_selection_and_search_keep_complete_exit_hints.snap
---
source: tui/src/transcript_view/footer_tests.rs
expression: "snapshots.join(\"\\n\")"
---
search=false, 12 columns: esc clear
search=false, 20 columns: enter copy+↓ · esc
search=false, 32 columns: enter copy & follow · esc clear
search=false, 80 columns: ⌃c copy · enter copy & follow · esc clear
search=true, 12 columns: esc cancel
search=true, 20 columns: enter accept · esc
search=true, 32 columns: enter accept · esc cancel
search=true, 80 columns: enter accept · ⌃p older · ⌃n newer · full transcript · esc cancel
