codex-rs/tui/src/transcript_view/snapshots/codex_tui__transcript_view__footer__tests__transcript_footer_keys_remain_distinct_from_prose_and_query_text.snap
---
source: tui/src/transcript_view/footer_tests.rs
expression: "format!(\"{buffer:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 2 },
    content: [
        "Find: Activity                                                                  ",
        "enter accept · ⌃p older · ⌃n newer · full transcript · esc cancel               ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 6, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 17, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 26, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 55, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 58, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 65, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
